--- a/src/components/ExpenseFilter/ExpensesFilter.css
+++ b/src/components/ExpenseFilter/ExpensesFilter.css
@@ -14,7 +14,7 @@
 .expenses-filter label {
   font-weight: bold;
   margin-bottom: 0.5rem;
-  color: red;
+  color: rgb(11, 5, 5);
 }
 
 .expenses-filter select {
